import psycopg

class DashboardController:
    def __init__(self):
        secret_key = 'applyche'
    def fetch_data_from_model(self):
        pass
    def give_data_to_view(self):
        pass
    def give_data_to_model(self):
        pass
    def fetch_data_from_view(self):
        pass